# rust-concurrent

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md  TESTER_INTEGRATION.md  align-ci.sh  ci-check.sh  coverage.sh  rustfmt.toml  test_clone.rs
.circleci/: config.yml
benches/: thread_pool_bench.rs
doc/: atomic_design_zh_CN_v1.0.claude.md  cas_executor_design_v1.0.claude.md  cas_executor_design_v1.0.gemini.md  cas_executor_design_v1.0.gpt.md  cas_executor_design_v2.0.gemini.md  cas_executor_design_v2.0.md  double_checked_executor_design.zh_CN.md  thread_pool_benchmark_baseline_2026-04-22.md  thread_pool_dataset_benchmark_2026-04-23.md  thread_pool_rayon_design_review_2026-04-24.md  thread_pool_work_stealing_prototype_2026-04-22.md
examples/: clone_test.rs  double_checked_lock_demo.rs  double_checked_lock_executor_demo.rs
src/: executor.rs  lib.rs  lock.rs
src/atomic/: atomic_bool.rs  atomic_f32.rs  atomic_f64.rs  atomic_i16.rs  atomic_i32.rs  atomic_i64.rs  atomic_i8.rs  atomic_integer_macro.rs  atomic_isize.rs  atomic_ref.rs  atomic_u16.rs  atomic_u32.rs  atomic_u64.rs  atomic_u8.rs  atomic_usize.rs  mod.rs  traits.rs
src/double_checked/: builder.rs  builder_error.rs  double_checked_lock.rs  double_checked_lock_executor.rs  double_checked_lock_executor_builder.rs  error.rs  execution_builder.rs  execution_context.rs  execution_logger.rs  execution_result.rs  executor_builder.rs  executor_config.rs  executor_error.rs  executor_lock_builder.rs  executor_ready_builder.rs  lock.rs  mod.rs  result.rs  states.rs
src/executor/: async_executor.rs  async_executor_service.rs  callable.rs  direct_executor.rs  executor.rs  executor_service.rs  mod.rs  runnable.rs  thread_per_task_executor.rs  thread_per_task_executor_service.rs  tokio_executor.rs  tokio_executor_service.rs
src/lock/: arc_async_mutex.rs  arc_async_rw_lock.rs  arc_monitor.rs  arc_mutex.rs  arc_rw_lock.rs  arc_std_mutex.rs  async_lock.rs  lock.rs  mod.rs  monitor.rs
src/task/: mod.rs  task_execution_error.rs  task_handle.rs  task_runner.rs
src/task/executor/: delay_executor.rs  direct_executor.rs  executor_trait.rs  future_executor.rs  mod.rs  thread_per_task_executor.rs  tokio_execution.rs  tokio_executor.rs
src/task/service/: executor_service.rs  fixed_thread_pool.rs  mod.rs  rejected_execution.rs  thread_per_task_executor_service.rs  thread_pool.rs  tokio_executor_service.rs  tokio_task_handle.rs  worker_queue.rs
test-data/: .gitignore  README.md  fetch_datasets.sh
test-data/cpu/: README.md
test-data/graph/: README.md
test-data/io/: README.md
test-data/raw/: README.md
tests/: lock_tests.rs  mod.rs
tests/atomic/: atomic_bool_tests.rs  atomic_f32_tests.rs  atomic_f64_tests.rs  atomic_i16_tests.rs  atomic_i32_tests.rs  atomic_i64_tests.rs  atomic_i8_tests.rs  atomic_isize_tests.rs  atomic_ref_tests.rs  atomic_u16_tests.rs  atomic_u32_tests.rs  atomic_u64_tests.rs  atomic_u8_tests.rs  atomic_usize_tests.rs  concurrent_tests.rs  integer_test_macro.rs  mod.rs  trait_tests.rs
tests/docs/: mod.rs  readme_tests.rs
tests/double_checked/: builder_tests.rs  config_tests.rs  context_tests.rs  double_checked_lock_executor_builder_tests.rs  double_checked_lock_executor_tests.rs  double_checked_lock_tests.rs  error_tests.rs  executor_builder_tests.rs  executor_lock_builder_tests.rs  executor_ready_builder_tests.rs  lock_tests.rs  mod.rs  result_tests.rs
tests/executor/: direct_executor_tests.rs  mod.rs  thread_per_task_executor_service_tests.rs  thread_per_task_executor_tests.rs  tokio_executor_service_tests.rs  tokio_executor_tests.rs
tests/lock/: arc_async_mutex_tests.rs  arc_async_rw_lock_tests.rs  arc_monitor_tests.rs  arc_mutex_tests.rs  arc_rw_lock_tests.rs  arc_std_mutex_tests.rs  async_lock_tests.rs  lock_tests.rs  mod.rs  parking_lot_mutex_tests.rs
tests/task/: mod.rs  task_execution_error_tests.rs  task_handle_tests.rs
tests/task/executor/: delay_executor_tests.rs  (+3 more)
(+12 files in other folders)
