[package]
name = "prism3-concurrent"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3-prism/prism3-rust-concurrent"
description = "Concurrent utilities library providing thread pools, task scheduling, synchronization primitives and other concurrent programming tools"
homepage = "https://github.com/3-prism/prism3-rust-concurrent"
documentation = "https://docs.rs/prism3-concurrent"
readme = "README.md"
keywords = ["concurrent", "async", "lock", "mutex", "rwlock"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "prism3_concurrent"
doctest = false

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync"] }
# Core utilities
prism3-core = "0.2.0"
# Functional programming utilities
prism3-function = "0.5.0"
# Atomic operations
prism3-atomic = "0.2.0"
# Error handling
thiserror = "2.0.17"
# Logging
log = "0.4"
# High-performance synchronization primitives
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
