[package]
name = "qubit-concurrent"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rust-concurrent"
description = "Concurrent utilities library providing thread pools, task scheduling, synchronization primitives and other concurrent programming tools"
homepage = "https://github.com/qubit-ltd/rust-concurrent"
documentation = "https://docs.rs/qubit-concurrent"
readme = "README.md"
keywords = ["concurrent", "async", "lock", "mutex", "rwlock"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_concurrent"
doctest = false

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync"] }
# Core utilities
qubit-common = "0.3.0"
# Functional programming utilities
qubit-function = "0.7.0"
# Atomic operations
qubit-atomic = "0.7.0"
# Error handling
thiserror = "2.0.17"
# Logging
log = "0.4"
# High-performance synchronization primitives
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
