[package]
name = "qubit-concurrent"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-concurrent"
description = "Concurrent utilities library providing thread pools, task scheduling, synchronization primitives and other concurrent programming tools"
homepage = "https://github.com/qubit-ltd/rs-concurrent"
documentation = "https://docs.rs/qubit-concurrent"
readme = "README.md"
keywords = ["concurrent", "async", "lock", "mutex", "rwlock"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_concurrent"
doctest = false

[dependencies]
# Core utilities
qubit-common = "0.6"
# Async runtime
tokio = { version = "1.52", features = ["sync", "rt"] }
# Error handling
thiserror = "2.0"
# Logging
log = "0.4"
# High-performance synchronization primitives
parking_lot = "0.12"
# Functional programming utilities
qubit-function = "0.10"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
